create: header html + css

--- a/index.html
+++ b/index.html
@@ -4,9 +4,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BeMyGuest Bakery</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="container">
+        <div class="row">
+          <a href="index.html" class="logo">
+            <img
+              class="header__logo"
+              src="img/logo.svg"
+              alt="Logo"
+              class="logo__img"
+            />
+          </a>
+          <nav class="header-nav">
+            <ul class="header-nav__list">
+              <li class="header-nav__item">
+                <a href="#" class="header-nav__link">О нас</a>
+              </li>
+              <li class="header-nav__item">
+                <a href="#" class="header-nav__link">Торты</a>
+              </li>
+              <li class="header-nav__item">
+                <a href="#" class="header-nav__link">Макаронс</a>
+              </li>
+              <li class="header-nav__item">
+                <a href="#" class="header-nav__link">Доставка</a>
+              </li>
+              <li class="header-nav__item">
+                <a href="#" class="header-nav__link">Отзывы</a>
+              </li>
+              <li class="header-nav__item">
+                <a href="#" class="header-nav__link">Галерея</a>
+              </li>
+              <li class="header-nav__item">
+                <a href="#" class="header-nav__link">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+
+          <button class="header__order-button">Заказать</button>
+
+          <div class="header__contacts-group contacts-group">
+            <a href="tel:+380673253955" class="contacts-group__item"
+              >+38 (067) 325 39 55</a
+            >
+            <a href="mailto:" class="contacts-group__item">mail@mail.ru</a>
+          </div>
+          <!-- /.header__contacts-group -->
+        </div>
+        <!-- /.row -->
+      </div>
+    </header>
     <script src="js/main.js"></script>
   </body>
 </html>
