--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <title>BeMyGuest Bakery</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap"
@@ -61,6 +63,64 @@
         <!-- /.row -->
       </div>
     </header>
+
+    <main>
+      <section class="section hero">
+        <div class="container">
+          <div class="row">
+            <div class="swiper-container hero-slider">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper hero-slider__wrapper">
+                <div class="swiper-slide hero-slider__slide">
+                  <div class="hero__text">
+                    <h1 class="hero__title">Торты</h1>
+                    <p class="hero__description">ручной работы</p>
+                  </div>
+                  <!-- /.hero-text -->
+                  <img src="img/hero/slider-img-1.jpg" alt="" />
+                </div>
+                <!-- Slides -->
+              </div>
+              <!-- slider wrapper -->
+              <div class="swiper-button-prev hero-slider__btn-prev"></div>
+              <!-- prev -->
+              <div class="swiper-button-next hero-slider__btn-next"></div>
+              <!-- next -->
+            </div>
+            <div class="socials-wrapper">
+              <a
+                href="https://www.facebook.com/BeMyGuestBakery"
+                class="socials-link"
+                ><img
+                  class="socials-icon"
+                  src="img/hero/facebook.svg"
+                  alt="Icon: Facebook"
+              /></a>
+              <a
+                href="http://instagram.com/bemyguestbakery"
+                class="socials-link"
+                ><img
+                  class="socials-icon"
+                  src="img/hero/instagram.svg"
+                  alt="Icon: Instagram"
+              /></a>
+              <a
+                href="https://g.page/BeMyGuestBakery?share"
+                class="socials-link"
+                ><img
+                  class="socials-icon"
+                  src="img/hero/google-maps.svg"
+                  alt="Icon: Google Maps"
+              /></a>
+            </div>
+            <!-- /.socials-wrapper -->
+          </div>
+          <!-- /.row -->
+        </div>
+        <!-- ./container -->
+      </section>
+    </main>
+    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
