--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
       <div class="container">
         <div class="row">
           <a href="index.html" class="logo">
-            <img
-              class="header__logo"
-              src="img/logo.svg"
-              alt="Logo"
-              class="logo__img"
-            />
+            <img class="header__logo logo__img" src="img/logo.svg" alt="Logo" />
           </a>
           <nav class="header-nav">
             <ul class="header-nav__list">
@@ -54,7 +49,7 @@
             <a href="mailto:" class="contacts-group__item">mail@mail.ru</a>
           </div>
           <!-- /.header__contacts-group -->
-          <button class="header__order-button">Заказать</button>
+          <button class="header__order-button button">Заказать</button>
         </div>
         <!-- /.row -->
       </div>
@@ -68,7 +63,11 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper hero-slider__wrapper">
               <div class="swiper-slide hero-slider__slide">
-                <h1 class="hero__title">Торты и десерты ручной работы</h1>
+                <h1 class="hero__title">
+                  Торты и десерты ручной работы
+                  <button class="hero__button button">заказать</button>
+                </h1>
+
                 <img
                   class="hero__image"
                   src="img/hero/slider-image-1.jpg"
