hero adaptive fixed

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             <div class="swiper-wrapper hero-slider__wrapper">
               <div class="swiper-slide hero-slider__slide">
                 <h1 class="hero__title">
-                  Торты и десерты ручной работы
-                  <button class="hero__button button">заказать</button>
+                  Эксклюзивные торты и десерты ручной работы
+                  <!-- <button class="hero__button button">заказать</button> -->
                 </h1>
 
                 <img
