--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 
     <main>
       <section class="section hero">
-        <!-- <div class="container"> -->
         <div class="row">
           <div class="swiper-container hero-slider">
             <!-- Additional required wrapper -->
@@ -101,36 +100,36 @@
 
             <!-- next -->
           </div>
-          <!-- <div class="socials-wrapper">
-            <a
-              href="https://www.facebook.com/BeMyGuestBakery"
-              class="socials-link"
-              ><img
-                class="socials-icon"
-                src="img/hero/facebook.svg"
-                alt="Icon: Facebook"
-            /></a>
-            <a href="http://instagram.com/bemyguestbakery" class="socials-link"
-              ><img
-                class="socials-icon"
-                src="img/hero/instagram.svg"
-                alt="Icon: Instagram"
-            /></a>
-            <a href="https://g.page/BeMyGuestBakery?share" class="socials-link"
-              ><img
-                class="socials-icon"
-                src="img/hero/google-maps.svg"
-                alt="Icon: Google Maps"
-            /></a>
-          </div> -->
-          <!-- /.socials-wrapper -->
+          <!-- ./swiper-slider -->
         </div>
         <!-- /.row -->
-        <!-- </div> -->
-        <!-- ./container -->
       </section>
     </main>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
+
+<!-- <div class="socials-wrapper">
+                      <a
+                        href="https://www.facebook.com/BeMyGuestBakery"
+                        class="socials-link"
+                        ><img
+                          class="socials-icon"
+                          src="img/hero/facebook.svg"
+                          alt="Icon: Facebook"
+                      /></a>
+                      <a href="http://instagram.com/bemyguestbakery" class="socials-link"
+                        ><img
+                          class="socials-icon"
+                          src="img/hero/instagram.svg"
+                          alt="Icon: Instagram"
+                      /></a>
+                      <a href="https://g.page/BeMyGuestBakery?share" class="socials-link"
+                        ><img
+                          class="socials-icon"
+                          src="img/hero/google-maps.svg"
+                          alt="Icon: Google Maps"
+                      /></a>
+                    </div> -->
+<!-- /.socials-wrapper -->
