added about us desctop

--- a/index.html
+++ b/index.html
@@ -104,6 +104,78 @@
         </div>
         <!-- /.row -->
       </section>
+      <section class="about-us">
+        <div class="container about-us__container">
+          <h2 class="section-title about-us__section-title">О нас</h2>
+          <p class="about-us__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
+            dignissimos velit accusamus ipsum obcaecati? Quasi magni sit eum
+            impedit alias tempore iusto beatae nulla! Facilis minus similique
+            quia. Voluptatem cumque consequatur dicta, corporis aperiam cum?
+            Praesentium earum ad autem, alias doloremque obcaecati repudiandae
+            ipsa eveniet aperiam blanditiis itaque optio debitis, culpa
+            cupiditate facere!
+          </p>
+          <p class="about-us__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
+            dignissimos velit accusamus ipsum obcaecati? Quasi magni sit eum
+            impedit alias tempore iusto beatae nulla! Facilis minus similique
+            quia. Voluptatem cumque consequatur dicta, corporis aperiam cum?
+            Praesentium earum ad autem, alias doloremque obcaecati repudiandae
+            ipsa eveniet aperiam blanditiis itaque optio debitis, culpa
+            cupiditate facere!
+          </p>
+          <div class="about-us__info">
+            <ul class="about-us__info-list">
+              <li class="about-us__info-item">
+                <div class="about-us__icon-wrapper">
+                  <img
+                    src="img/about-us/coffee.svg"
+                    alt="Icon: Coffee"
+                    class="about-us__info-icon"
+                  />
+                </div>
+                <!-- /.about-us__icon-wrapper -->
+                Кофейня
+              </li>
+              <li class="about-us__info-item">
+                <div class="about-us__icon-wrapper">
+                  <img
+                    src="img/about-us/cake.svg"
+                    alt="Icon: Cake"
+                    class="about-us__info-icon"
+                  />
+                </div>
+                <!-- /.about-us__icon-wrapper -->
+                Кондитерская
+              </li>
+              <li class="about-us__info-item">
+                <div class="about-us__icon-wrapper">
+                  <img
+                    src="img/about-us/watch.svg"
+                    alt="Icon: Watch"
+                    class="about-us__info-icon"
+                  />
+                </div>
+                <!-- /.about-us__icon-wrapper -->
+                Готовим 3 суток
+              </li>
+              <li class="about-us__info-item">
+                <div class="about-us__icon-wrapper">
+                  <img
+                    src="img/about-us/transport.svg"
+                    alt="Icon: Delivery"
+                    class="about-us__info-icon"
+                  />
+                </div>
+                <!-- /.about-us__icon-wrapper -->
+                Доставка
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- /.container -->
+      </section>
     </main>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
