added about-us section adaprive

--- a/index.html
+++ b/index.html
@@ -106,26 +106,31 @@
       </section>
       <section class="about-us">
         <div class="container about-us__container">
-          <h2 class="section-title about-us__section-title">О нас</h2>
-          <p class="about-us__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
-            dignissimos velit accusamus ipsum obcaecati? Quasi magni sit eum
-            impedit alias tempore iusto beatae nulla! Facilis minus similique
-            quia. Voluptatem cumque consequatur dicta, corporis aperiam cum?
-            Praesentium earum ad autem, alias doloremque obcaecati repudiandae
-            ipsa eveniet aperiam blanditiis itaque optio debitis, culpa
-            cupiditate facere!
-          </p>
-          <p class="about-us__text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
-            dignissimos velit accusamus ipsum obcaecati? Quasi magni sit eum
-            impedit alias tempore iusto beatae nulla! Facilis minus similique
-            quia. Voluptatem cumque consequatur dicta, corporis aperiam cum?
-            Praesentium earum ad autem, alias doloremque obcaecati repudiandae
-            ipsa eveniet aperiam blanditiis itaque optio debitis, culpa
-            cupiditate facere!
-          </p>
-          <div class="about-us__info">
+          <div class="about-us__row">
+            <div class="about-us__text-content">
+              <h2 class="section-title about-us__section-title">О нас</h2>
+              <p class="about-us__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
+                dignissimos velit accusamus ipsum obcaecati? Quasi magni sit eum
+                impedit alias tempore iusto beatae nulla! Facilis minus
+                similique quia. Voluptatem cumque consequatur dicta, corporis
+                aperiam cum? Praesentium earum ad autem, alias doloremque
+                obcaecati repudiandae ipsa eveniet aperiam blanditiis itaque
+                optio debitis, culpa cupiditate facere!
+              </p>
+              <p class="about-us__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
+                dignissimos velit accusamus ipsum obcaecati? Quasi magni sit eum
+                impedit alias tempore iusto beatae nulla! Facilis minus
+                similique quia.
+              </p>
+              <p class="about-us__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Cupiditate ad possimus corrupti, eum sint excepturi nulla sequi
+                ipsa tenetur culpa.
+              </p>
+            </div>
+            <!-- /.about-us__text-content -->
             <ul class="about-us__info-list">
               <li class="about-us__info-item">
                 <div class="about-us__icon-wrapper">
