--- a/index.html
+++ b/index.html
@@ -178,6 +178,30 @@
               </li>
             </ul>
           </div>
+          <!-- ./about-us__row -->
+          <div class="socials-wrapper">
+            <a
+              href="https://www.facebook.com/BeMyGuestBakery"
+              class="socials-link"
+              ><img
+                class="socials-icon"
+                src="img/facebook.svg"
+                alt="Icon: Facebook"
+            /></a>
+            <a href="http://instagram.com/bemyguestbakery" class="socials-link"
+              ><img
+                class="socials-icon"
+                src="img/instagram.svg"
+                alt="Icon: Instagram"
+            /></a>
+            <a href="https://g.page/BeMyGuestBakery?share" class="socials-link"
+              ><img
+                class="socials-icon"
+                src="img/google-maps.svg"
+                alt="Icon: Google Maps"
+            /></a>
+          </div>
+          <!-- /.socials-wrapper -->
         </div>
         <!-- /.container -->
       </section>
@@ -186,27 +210,3 @@
     <script src="js/main.js"></script>
   </body>
 </html>
-
-<!-- <div class="socials-wrapper">
-                      <a
-                        href="https://www.facebook.com/BeMyGuestBakery"
-                        class="socials-link"
-                        ><img
-                          class="socials-icon"
-                          src="img/hero/facebook.svg"
-                          alt="Icon: Facebook"
-                      /></a>
-                      <a href="http://instagram.com/bemyguestbakery" class="socials-link"
-                        ><img
-                          class="socials-icon"
-                          src="img/hero/instagram.svg"
-                          alt="Icon: Instagram"
-                      /></a>
-                      <a href="https://g.page/BeMyGuestBakery?share" class="socials-link"
-                        ><img
-                          class="socials-icon"
-                          src="img/hero/google-maps.svg"
-                          alt="Icon: Google Maps"
-                      /></a>
-                    </div> -->
-<!-- /.socials-wrapper -->
