delivery html and description css

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="#" class="header-nav__link">Макаронс</a>
               </li>
               <li class="header-nav__item">
-                <a href="#" class="header-nav__link">Доставка</a>
+                <a href="#" class="header-nav__link">Доставка и B2B</a>
               </li>
               <li class="header-nav__item">
                 <a href="#" class="header-nav__link">Отзывы</a>
@@ -104,7 +104,7 @@
         </div>
         <!-- /.row -->
       </section>
-      <section class="about-us">
+      <section class="section about-us">
         <div class="container about-us__container">
           <div class="about-us__row">
             <div class="about-us__text-content">
@@ -205,6 +205,73 @@
         </div>
         <!-- /.container -->
       </section>
+      <section class="section cakes"></section>
+      <!-- /.section cakes -->
+      <section class="delivery section">
+        <div class="container">
+          <h2 class="section-title delivery__section-title">Доставка</h2>
+          <div class="row">
+            <div class="delivery__description-block">
+              <div class="delivery__text-block">
+                <h3 class="delivery__sub-title">Условия доставки</h3>
+                <p class="delivery__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Deleniti nesciunt officia impedit? Accusantium nam adipisci
+                  voluptas exercitationem qui similique error, aliquam, officiis
+                  non minus quas facere obcaecati ipsa odio doloremque.
+                </p>
+              </div>
+              <!-- /.delivery__text-block -->
+              <div class="delivery__text-block">
+                <h3 class="delivery__sub-title">Способы оплаты</h3>
+                <p class="delivery__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Consectetur aliquid earum itaque placeat, dolores laudantium
+                  quod ullam aspernatur dolor corrupti!
+                </p>
+              </div>
+              <!-- /.delivery__text-block -->
+              <div class="delivery__text-block">
+                <h3 class="delivery__sub-title">Доставка B2B</h3>
+                <p class="delivery__text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Consectetur aliquid earum itaque placeat, dolores laudantium
+                  quod ullam aspernatur dolor corrupti!
+                </p>
+              </div>
+              <!-- /.delivery__text-block -->
+            </div>
+            <!-- /.delivery__description-block -->
+
+            <div class="delivery__list-block">
+              <ul class="delivery__list">
+                <li class="delivery__list-item">
+                  <span class="delivery__item-number">1</span>
+                  <strong class="delivery__item-text"
+                    >Позвоните нам или оставьте заявку</strong
+                  >
+                </li>
+                <li class="delivery__list-item">
+                  <span class="delivery__item-number">2</span>
+                  <strong class="delivery__item-text"
+                    >Наш менеджер согласует с Вами детали</strong
+                  >
+                </li>
+                <li class="delivery__list-item">
+                  <span class="delivery__item-number">3</span>
+                  <strong class="delivery__item-text"
+                    >Доставка или самовывоз</strong
+                  >
+                </li>
+              </ul>
+            </div>
+            <!-- /.delivery__list-block -->
+          </div>
+          <!-- /.row -->
+        </div>
+        <!-- /.container -->
+      </section>
+      <!-- delivery -->
     </main>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
