--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
       <section class="delivery section">
         <div class="container">
           <h2 class="section-title delivery__section-title">Доставка</h2>
-          <div class="row">
+          <div class="row delivery__row">
             <div class="delivery__description-block">
               <div class="delivery__text-block">
                 <h3 class="delivery__sub-title">Условия доставки</h3>
@@ -243,29 +243,45 @@
             </div>
             <!-- /.delivery__description-block -->
 
-            <div class="delivery__list-block">
-              <ul class="delivery__list">
-                <li class="delivery__list-item">
-                  <span class="delivery__item-number">1</span>
-                  <strong class="delivery__item-text"
-                    >Позвоните нам или оставьте заявку</strong
+            <ul class="delivery__list">
+              <li class="delivery__list-item">
+                <span class="delivery__list-item-number">1</span>
+                <div class="delivery__list-item-text">
+                  <h5 class="delivery__list-item-title">Заказ</h5>
+                  <strong class="delivery__list-item-description"
+                    >Позвоните нам или оставьте заявку на сайте</strong
                   >
-                </li>
-                <li class="delivery__list-item">
-                  <span class="delivery__item-number">2</span>
-                  <strong class="delivery__item-text"
-                    >Наш менеджер согласует с Вами детали</strong
+                </div>
+              </li>
+              <li class="delivery__list-item">
+                <span class="delivery__list-item-number">2</span>
+                <div class="delivery__list-item-text">
+                  <h5 class="delivery__list-item-title">Уточнение деталей</h5>
+                  <strong class="delivery__list-item-description"
+                    >Наш менеджер свяжется с вами для обсуждения всех деталей
+                    заказа</strong
                   >
-                </li>
-                <li class="delivery__list-item">
-                  <span class="delivery__item-number">3</span>
-                  <strong class="delivery__item-text"
-                    >Доставка или самовывоз</strong
+                </div>
+              </li>
+              <!-- <li class="delivery__list-item">
+                <span class="delivery__list-item-number">3</span>
+                <div class="delivery__list-item-text">
+                  <h5 class="delivery__list-item-title">Приготовление</h5>
+                  <strong class="delivery__list-item-description"
+                    >Мы изготавливаем ваш заказs</strong
                   >
-                </li>
-              </ul>
-            </div>
-            <!-- /.delivery__list-block -->
+                </div>
+              </li> -->
+              <li class="delivery__list-item">
+                <div class="delivery__list-item-text">
+                  <span class="delivery__list-item-number">3</span>
+                  <h5 class="delivery__list-item-title">Доставка</h5>
+                </div>
+                <strong class="delivery__list-item-description"
+                  >Наш курьер доставляет заказ или вы забираете его сами</strong
+                >
+              </li>
+            </ul>
           </div>
           <!-- /.row -->
         </div>
