--- a/index.html
+++ b/index.html
@@ -214,21 +214,22 @@
             <div class="delivery__description-block">
               <div class="delivery__text-block">
                 <h3 class="delivery__sub-title">Условия доставки</h3>
-                <p class="delivery__text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Deleniti nesciunt officia impedit? Accusantium nam adipisci
-                  voluptas exercitationem qui similique error, aliquam, officiis
-                  non minus quas facere obcaecati ipsa odio doloremque.
-                </p>
+
+                  <ul class="delivery__text-list">
+                    <li class="delivery__text-list-item">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</li>
+                    <li class="delivery__text-list-item">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab, ipsum?</li>
+                    <li class="delivery__text-list-item">Lorem ipsum dolor sit amet.</li>
+                    <li class="delivery__text-list-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, voluptatem cupiditate harum atque reiciendis natus corporis voluptatum laborum iste optio!</li>
+                  </ul>
+
               </div>
               <!-- /.delivery__text-block -->
               <div class="delivery__text-block">
                 <h3 class="delivery__sub-title">Способы оплаты</h3>
-                <p class="delivery__text">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                  Consectetur aliquid earum itaque placeat, dolores laudantium
-                  quod ullam aspernatur dolor corrupti!
-                </p>
+                <ul class="delivery__text-list">
+                  <li class="delivery__text-list-item">Lorem ipsum dolor sit.</li>
+                  <li class="delivery__text-list-item">Lorem ipsum dolor sit amet.</li>
+
               </div>
               <!-- /.delivery__text-block -->
               <div class="delivery__text-block">
@@ -245,23 +246,23 @@
 
             <ul class="delivery__list">
               <li class="delivery__list-item">
-                <span class="delivery__list-item-number">1</span>
                 <div class="delivery__list-item-text">
+                  <span class="delivery__list-item-number">1</span>
                   <h5 class="delivery__list-item-title">Заказ</h5>
-                  <strong class="delivery__list-item-description"
-                    >Позвоните нам или оставьте заявку на сайте</strong
-                  >
                 </div>
+                <strong class="delivery__list-item-description"
+                  >Позвоните нам или оставьте заявку на сайте</strong
+                >
               </li>
               <li class="delivery__list-item">
-                <span class="delivery__list-item-number">2</span>
                 <div class="delivery__list-item-text">
+                  <span class="delivery__list-item-number">2</span>
                   <h5 class="delivery__list-item-title">Уточнение деталей</h5>
-                  <strong class="delivery__list-item-description"
-                    >Наш менеджер свяжется с вами для обсуждения всех деталей
-                    заказа</strong
-                  >
                 </div>
+                <strong class="delivery__list-item-description"
+                  >Наш менеджер свяжется с вами для обсуждения всех деталей
+                  заказа</strong
+                >
               </li>
               <!-- <li class="delivery__list-item">
                 <span class="delivery__list-item-number">3</span>
