--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@
                   Consectetur aliquid earum itaque placeat, dolores laudantium
                   quod ullam aspernatur dolor corrupti!
                 </p>
+
+                <a href="#" class="button delivery__b2b-file">Доставка B2B</a>
               </div>
               <!-- /.delivery__text-block -->
             </div>
