revies section and adaptive

--- a/index.html
+++ b/index.html
@@ -301,19 +301,58 @@
           <div class="swiper-container reviews__slider">
 
             <div class="swiper-wrapper reviews__slider-wrapper">
-              <div class="swiper-slide reviews__slider-slide">Slide 1</div>
+              <div class="swiper-slide reviews__slider-slide">
+                <div class="reviews__author">
+                  <img src="img/reviws/avatar-1.jpg" alt="Аватар: Гость 1" class="reviews__avatar">
+                  <h4 class="reviews__name">Инна</h4>
+                </div>
+                <!-- ./reviews__author -->
+                <p class="reviews__text">Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты. Lorem, строчка. Возвращайся, залетают которое ее имени океана осталось злых однажды знаках несколько свое последний не вдали? Маленькая, рыбными необходимыми.</p>
+              </div>
               <!-- ./reviews__slide -->
-              <div class="swiper-slide reviews__slider-slide">Slide 2</div>
+              <div class="swiper-slide reviews__slider-slide"><div class="reviews__author">
+                <img src="img/reviws/avatar-2.jpg" alt="Аватар: Гость 2" class="reviews__avatar">
+                <h4 class="reviews__name">Ольга</h4>
+              </div>
+              <!-- ./reviews__author -->
+              <p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Свое ее маленькая эта деревни напоивший щеке на берегу лучше то текст ведущими. Раз даль до, использовало правилами, букв ручеек они, парадигматическая журчит запятых заманивший буквоград? </p></div>
               <!-- ./reviews__slide -->
-              <div class="swiper-slide reviews__slider-slide">Slide 3</div>
+              <div class="swiper-slide reviews__slider-slide"><div class="reviews__author">
+                <img src="img/reviws/avatar-3.jpg" alt="Аватар: Гость 3" class="reviews__avatar">
+                <h4 class="reviews__name">Артур</h4>
+              </div>
+              <!-- ./reviews__author -->
+              <p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Своего всеми грустный единственное языком то семь запятой заглавных ipsum?</p></div>
+              <!-- ./reviews__slide -->
+              <div class="swiper-slide reviews__slider-slide">
+                <div class="reviews__author">
+                  <img src="img/reviws/avatar-4.jpg" alt="Аватар: Гость 4" class="reviews__avatar">
+                  <h4 class="reviews__name">Ольга</h4>
+                </div>
+                <!-- ./reviews__author -->
+                <p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Свое ее
+                  маленькая эта деревни напоивший щеке на берегу лучше то текст ведущими. Раз даль до, использовало правилами, букв
+                  ручеек они, парадигматическая журчит запятых заманивший буквоград? </p>
+              </div>
+              <!-- ./reviews__slide -->
+              <div class="swiper-slide reviews__slider-slide">
+                <div class="reviews__author">
+                  <img src="img/reviws/avatar-5.jpg" alt="Аватар: Гость 5" class="reviews__avatar">
+                  <h4 class="reviews__name">Алина</h4>
+                </div>
+                <!-- ./reviews__author -->
+                <p class="reviews__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Свое ее маленькая эта деревни
+                напоивший щеке на берегу лучше то текст ведущими. Раз даль до, использовало правилами, букв ручеек они,
+                парадигматическая журчит запятых заманивший буквоград?</p>
+              </div>
               <!-- ./reviews__slide -->
             </div>
 
             <div class="swiper-pagination reviews__slider-pagination"></div>
             <!--pagination -->
             
-            <div class="swiper-button-prev reviews__slider-button-prev"></div>
-            <div class="swiper-button-next reviews__slider-button-next"></div>
+            <!-- <div class="swiper-button-prev reviews__slider-button-prev"></div>
+            <div class="swiper-button-next reviews__slider-button-next"></div> -->
             <!--navigation buttons -->
           
           </div>
