--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <a href="#" class="header-nav__link">Макаронс</a>
               </li>
               <li class="header-nav__item">
+                <a href="#" class="header-nav__link">Десерты</a>
+              </li>
+              <li class="header-nav__item">
                 <a href="#" class="header-nav__link">Доставка и B2B</a>
               </li>
               <li class="header-nav__item">
